2010-06-29  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Dirk Schulze.

        REGRESSION: text-shadow CSS applied to SVG no longer works
        https://bugs.webkit.org/show_bug.cgi?id=40960

        Readd text-shadow support, this time supporting multiple shadows.
        It's not exactly like HTML, because SVG draws fill/stroke phases seperated - the png shows the difference.

        Tests: svg/css/text-shadow-multiple.xhtml

        * rendering/InlineTextBox.cpp:
        (WebCore::InlineTextBox::applyShadowToGraphicsContext): Refactored from paintTextWithShadows(), so SVG can reuse.
        (WebCore::paintTextWithShadows): Use refactored applyShadowToGraphicsContext() function.
        * rendering/InlineTextBox.h:
        * rendering/SVGInlineTextBox.cpp:
        (WebCore::SVGInlineTextBox::paintTextWithShadows): Added.
        (WebCore::SVGInlineTextBox::paintText): Call paintTextWithShadows() instead of directly drawing the text.
        * rendering/SVGInlineTextBox.h:

2010-06-29  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        REGRESSION: text-shadow CSS applied to SVG no longer works
        https://bugs.webkit.org/show_bug.cgi?id=40960

        Add testcase covering multiple text-shadow applied to SVG, in comparision with HTML.

        * platform/mac/svg/css/text-shadow-multiple-expected.checksum: Added.
        * platform/mac/svg/css/text-shadow-multiple-expected.png: Added.
        * platform/mac/svg/css/text-shadow-multiple-expected.txt: Added.
        * svg/css/text-shadow-multiple.xhtml: Added.


Canonical link: https://commits.webkit.org/53057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62099 268f45cc-cd09-0410-ab3c-d52691b4dbfc